# ict

./: .env.example  .gitignore  Dockerfile  README.md  SETUP.md  backtest_binance.py  backtest_okx.py  backtest_strategy_521.py  debug_backtest.py  demo_account.py  docker-compose.yml  full.md  ict.md  ict_strategy.pine  main.py  monitor_24h.sh  pyproject.toml  render.yaml  requirements.txt  run_backtest_binance.py  session.md  setup.md  smoke_test.py  start.sh  test_binance_orders.py  test_integration.py  test_live_connection.py  trading.db
analytics/: performance.py
api/: main.py
api/static/: index.html
api/static/assets/: Charts-BSZNXl2W.js  Charts-Cq8iRScN.js  Charts-Du9wLUF4.js  Charts-P6EsHeAA.js  Charts-TwOx20fe.js  Overview-CYRFD0Rz.js  Overview-DBf1meWi.js  Overview-DM0LYB_W.js  Overview-DrL9uwSi.js  Overview-DxMpwqC1.js  RiskCenter-CaCL_4yN.js  RiskCenter-CzteCrvM.js  RiskCenter-DLgTkov5.js  RiskCenter-etsh-t1Y.js  RiskCenter-p2vkKEUl.js  Settings-BwmnNYtx.js  Settings-CP50qIkX.js  Settings-CivNSmy6.js  Settings-DhZ4403B.js  Settings-ZXldrcZS.js  SignalBadge-DsNCwVOR.js  Signals--VfiAFbr.js  Signals-C4Im5YpX.js  Signals-C8mYNNkO.js  Signals-Cs9iiQkT.js  Signals-t7OQ4SDl.js  TradeLog-B0ReNOAW.js  TradeLog-BgsgbgAh.js  TradeLog-CX1unXX4.js  TradeLog-Co6kYhAO.js  TradeLog-DhVzgLO9.js  activity-C3dlHaze.js  activity-CfSNFB0D.js  activity-CuYpMnvo.js  activity-DlSqCmNo.js  activity-zLdZJfVi.js  dollar-sign-BNvW69_2.js  dollar-sign-BfDRJ3tX.js  dollar-sign-CRksnxSN.js  dollar-sign-CdQSuW4-.js  (+44 more)
backtesting/: engine.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/components/: EMABiasChart.tsx  ICTChart.tsx  Layout.tsx  SignalBadge.tsx
dashboard/src/hooks/: useDataStream.ts  usePriceStream.test.ts  usePriceStream.ts
dashboard/src/pages/: Charts.tsx  History.tsx  Overview.tsx  RiskCenter.tsx  Settings.tsx  Signals.tsx  TradeLog.tsx
dashboard/src/services/: api.ts  settingsService.ts
dashboard/src/utils/: format.ts  signalCalculator.ts
database/: config.py  manager.py  models.py  session.py
discord/: bot.py
execution/: executor.py  sync_worker.py
ict_engine/: breaker_block.py  fvg.py  liquidity.py  market_structure.py  order_blocks.py  premium_discount.py  sessions.py  utils.py
market_data/: binance.py  coingecko.py  collector.py
ml_engine/: pipeline.py
news_engine/: engine.py
risk/: manager.py
scripts/: verify_live_path_e2e.py  verify_production_exact.py  verify_signal_rate.py
signal_engine/: combo521.py  combo521_mtf.py  engine.py
telegram/: bot.py
tests/: test_api_endpoints_freshness.py  test_ict_engine.py  test_orchestrator_mirror.py  test_sync_worker.py
trading_engine/: orchestrator.py
