[project]
name = "trading-intelligence-platform"
version = "0.1.0"
description = "Institutional AI Trading Intelligence Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pydantic-settings",
    "pandas",
    "polars",
    "numpy",
    "loguru",
    "redis",
    "celery",
    "python-dotenv",
    "xgboost",
    "lightgbm",
    "catboost",
    "scikit-learn",
    "plotly",
    "httpx",
    "websockets"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
