[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "trading-intelligence-platform"
version = "0.1.0"
description = "Institutional AI Trading Intelligence Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "polars",
    "numpy",
    "loguru",
    "httpx",
    "websockets",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
